finished derivatives intro

--- a/micrograd.ipynb
+++ b/micrograd.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +43,7 @@
        "20.0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,16 +57,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f6dfb78fda0>]"
+       "[<matplotlib.lines.Line2D at 0x7fad590c6ff0>]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -97,22 +97,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "20.014003000000002\n"
-     ]
+     "data": {
+      "text/plain": [
+       "20.014003000000002"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Let's see hgow a small nudge affects the value of y\n",
     "h = 0.001\n",
     "x = 3.0\n",
-    "print(f(x+h))"
+    "f(x+h)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14.00300000000243"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# It increases, as we expect form the graph above as the line has a positive line. \n",
+    "# Let's get the slope:\n",
+    "((f(x+h))-f(x))/h"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14.000001158365194"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# The more we decrease h, the closer we get get to convergence\n",
+    "h = 0.0000000001\n",
+    "((f(x+h))-f(x))/h"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-21.996999999998934"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Let's check the slop at negative 3, we should see a negative slope\n",
+    "h = 0.001\n",
+    "x = -3.0\n",
+    "((f(x+h))-f(x))/h"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's now go a bit more complex"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.0"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = 2.0\n",
+    "b = -3.0\n",
+    "c = 10.0\n",
+    "d = a*b + c\n",
+    "d"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's look at the detrivative of d in respect to a, b, and c"
    ]
   },
   {
@@ -124,33 +232,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "14.00300000000243\n"
+      "d1=4.0\n",
+      "d2=3.999699999999999\n",
+      "Slope: -3.000000000010772\n"
      ]
     }
    ],
    "source": [
-    "# It increases, as we expect form the graph above as the line has a positive line. \n",
-    "# Let's get the slope:\n",
-    "print(((f(x+h))-f(x))/h)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "14.000001158365194\n"
-     ]
-    }
-   ],
-   "source": [
-    "# The more we decrease h, the closer we get get to convergence\n",
-    "h = 0.0000000001\n",
-    "print(((f(x+h))-f(x))/h)"
+    "h = 0.0001\n",
+    "\n",
+    "# inputs\n",
+    "a = 2.0\n",
+    "b = -3.0\n",
+    "c = 10.0\n",
+    "\n",
+    "d1 = a*b + c\n",
+    "a += h\n",
+    "d2 = a*b + c\n",
+    "\n",
+    "print(f'{d1=}')\n",
+    "print(f'{d2=}')\n",
+    "# How much the function increased (d2 - d1) normalised by h\n",
+    "print(f'Slope: {(d2-d1)/h}')"
    ]
   },
   {
