--- a/micrograd.ipynb
+++ b/micrograd.ipynb
@@ -63,7 +63,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fad590c6ff0>]"
+       "[<matplotlib.lines.Line2D at 0x7ff5f8368350>]"
       ]
      },
      "execution_count": 3,
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -252,9 +252,359 @@
     "\n",
     "print(f'{d1=}')\n",
     "print(f'{d2=}')\n",
-    "# How much the function increased (d2 - d1) normalised by h\n",
+    "# How much the function increased (d2 - d1), normalised by h\n",
     "print(f'Slope: {(d2-d1)/h}')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This makes sense as dy/da of a*b + c would be b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "d1=4.0\n",
+      "d2=4.0002\n",
+      "Slope: 2.0000000000042206\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Now let's do b\n",
+    "h = 0.0001\n",
+    "\n",
+    "# inputs\n",
+    "a = 2.0\n",
+    "b = -3.0\n",
+    "c = 10.0\n",
+    "\n",
+    "d1 = a*b + c\n",
+    "b += h\n",
+    "d2 = a*b + c\n",
+    "\n",
+    "print(f'{d1=}')\n",
+    "print(f'{d2=}')\n",
+    "# How much the function increased (d2 - d1), normalised by h\n",
+    "print(f'Slope: {(d2-d1)/h}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This also makes sense as dy/db of a*b + c would be a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "d1=4.0\n",
+      "d2=4.0001\n",
+      "Slope: 0.9999999999976694\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Now let's do c\n",
+    "h = 0.0001\n",
+    "\n",
+    "# inputs\n",
+    "a = 2.0\n",
+    "b = -3.0\n",
+    "c = 10.0\n",
+    "\n",
+    "d1 = a*b + c\n",
+    "c += h\n",
+    "d2 = a*b + c\n",
+    "\n",
+    "print(f'{d1=}')\n",
+    "print(f'{d2=}')\n",
+    "# How much the function increased (d2 - d1), normalised by h\n",
+    "print(f'Slope: {(d2-d1)/h}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This also makes sense as dy/dc of a*b + c would be 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Value object"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Value(data=-1.0)\n",
+      "Value(data=-6.0)\n",
+      "Value(data=4.0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Value:\n",
+    "\n",
+    "    def __init__(self, data, _children=(), _op='') -> None:\n",
+    "        self.data = data\n",
+    "        self._prev = set(_children) # we can save the previous value types that created it, a history\n",
+    "        self._op = _op # save the operation\n",
+    "\n",
+    "    # Python internally uses the __repr__ function to return this string as its printable value\n",
+    "    def __repr__(self) -> str:\n",
+    "        return f\"Value(data={self.data})\" # looks nicer than the default\n",
+    "    \n",
+    "    # let's add an addition option\n",
+    "    def __add__(self, other):\n",
+    "        out = Value(self.data + other.data, (self, other), '+') # remeber to case is as a Value class too\n",
+    "        return out\n",
+    "    \n",
+    "    # let's add an multiplication option\n",
+    "    def __mul__(self, other):\n",
+    "        out = Value(self.data * other.data, (self, other), '*') # remeber to case is as a Value class too\n",
+    "        return out\n",
+    "    \n",
+    "a = Value(2.0)\n",
+    "b = Value(-3.0)\n",
+    "c = Value(10.0)\n",
+    "# a.__add__(b)\n",
+    "print(a + b)\n",
+    "# a.__mul__(b)\n",
+    "print(a*b)\n",
+    "# a.__mul__(b).__add__(c)\n",
+    "d = a*b+c\n",
+    "print(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{Value(data=-6.0), Value(data=10.0)}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# We can see its children\n",
+    "d._prev"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'+'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# The last operation was '+', as + c was done last\n",
+    "d._op"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Let's add in some visualisation\n",
+    "from graphviz import Digraph\n",
+    "\n",
+    "def trace(root):\n",
+    "  # builds a set of all nodes and edges in a graph\n",
+    "  nodes, edges = set(), set()\n",
+    "  def build(v):\n",
+    "    if v not in nodes:\n",
+    "      nodes.add(v)\n",
+    "      for child in v._prev:\n",
+    "        edges.add((child, v))\n",
+    "        build(child)\n",
+    "  build(root)\n",
+    "  return nodes, edges\n",
+    "\n",
+    "def draw_dot(root):\n",
+    "  dot = Digraph(format='svg', graph_attr={'rankdir': 'LR'}) # LR = left to right\n",
+    "  \n",
+    "  nodes, edges = trace(root)\n",
+    "  for n in nodes:\n",
+    "    uid = str(id(n))\n",
+    "    # for any value in the graph, create a rectangular ('record') node for it\n",
+    "    dot.node(name = uid, label = \"{ data %.4f}\" % ( n.data, ), shape='record')\n",
+    "    if n._op:\n",
+    "      # if this value is a result of some operation, create an op node for it\n",
+    "      dot.node(name = uid + n._op, label = n._op)\n",
+    "      # and connect this node to it\n",
+    "      dot.edge(uid + n._op, uid)\n",
+    "\n",
+    "  for n1, n2 in edges:\n",
+    "    # connect n1 to the op node of n2\n",
+    "    dot.edge(str(id(n1)), str(id(n2)) + n2._op)\n",
+    "\n",
+    "  return dot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "image/svg+xml": [
+       "<?xml version=\"1.0\" encoding=\"UTF-8\" standalone=\"no\"?>\n",
+       "<!DOCTYPE svg PUBLIC \"-//W3C//DTD SVG 1.1//EN\"\n",
+       " \"http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd\">\n",
+       "<!-- Generated by graphviz version 2.43.0 (0)\n",
+       " -->\n",
+       "<!-- Title: %3 Pages: 1 -->\n",
+       "<svg width=\"580pt\" height=\"128pt\"\n",
+       " viewBox=\"0.00 0.00 580.00 128.00\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">\n",
+       "<g id=\"graph0\" class=\"graph\" transform=\"scale(1 1) rotate(0) translate(4 124)\">\n",
+       "<title>%3</title>\n",
+       "<polygon fill=\"white\" stroke=\"transparent\" points=\"-4,4 -4,-124 576,-124 576,4 -4,4\"/>\n",
+       "<!-- 140694410568880 -->\n",
+       "<g id=\"node1\" class=\"node\">\n",
+       "<title>140694410568880</title>\n",
+       "<polygon fill=\"none\" stroke=\"black\" points=\"2.5,-83.5 2.5,-119.5 104.5,-119.5 104.5,-83.5 2.5,-83.5\"/>\n",
+       "<text text-anchor=\"middle\" x=\"53.5\" y=\"-97.8\" font-family=\"Times,serif\" font-size=\"14.00\">data 2.0000</text>\n",
+       "</g>\n",
+       "<!-- 140695882297232* -->\n",
+       "<g id=\"node6\" class=\"node\">\n",
+       "<title>140695882297232*</title>\n",
+       "<ellipse fill=\"none\" stroke=\"black\" cx=\"170\" cy=\"-73.5\" rx=\"27\" ry=\"18\"/>\n",
+       "<text text-anchor=\"middle\" x=\"170\" y=\"-69.8\" font-family=\"Times,serif\" font-size=\"14.00\">*</text>\n",
+       "</g>\n",
+       "<!-- 140694410568880&#45;&gt;140695882297232* -->\n",
+       "<g id=\"edge5\" class=\"edge\">\n",
+       "<title>140694410568880&#45;&gt;140695882297232*</title>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M104.72,-89.22C114.78,-86.76 125.14,-84.23 134.52,-81.93\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"135.37,-85.33 144.25,-79.55 133.71,-78.53 135.37,-85.33\"/>\n",
+       "</g>\n",
+       "<!-- 140694408566480 -->\n",
+       "<g id=\"node2\" class=\"node\">\n",
+       "<title>140694408566480</title>\n",
+       "<polygon fill=\"none\" stroke=\"black\" points=\"0,-28.5 0,-64.5 107,-64.5 107,-28.5 0,-28.5\"/>\n",
+       "<text text-anchor=\"middle\" x=\"53.5\" y=\"-42.8\" font-family=\"Times,serif\" font-size=\"14.00\">data &#45;3.0000</text>\n",
+       "</g>\n",
+       "<!-- 140694408566480&#45;&gt;140695882297232* -->\n",
+       "<g id=\"edge6\" class=\"edge\">\n",
+       "<title>140694408566480&#45;&gt;140695882297232*</title>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M107.06,-58.89C116.25,-61.06 125.61,-63.27 134.17,-65.29\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"133.62,-68.75 144.16,-67.64 135.23,-61.94 133.62,-68.75\"/>\n",
+       "</g>\n",
+       "<!-- 140694371498224 -->\n",
+       "<g id=\"node3\" class=\"node\">\n",
+       "<title>140694371498224</title>\n",
+       "<polygon fill=\"none\" stroke=\"black\" points=\"470,-27.5 470,-63.5 572,-63.5 572,-27.5 470,-27.5\"/>\n",
+       "<text text-anchor=\"middle\" x=\"521\" y=\"-41.8\" font-family=\"Times,serif\" font-size=\"14.00\">data 4.0000</text>\n",
+       "</g>\n",
+       "<!-- 140694371498224+ -->\n",
+       "<g id=\"node4\" class=\"node\">\n",
+       "<title>140694371498224+</title>\n",
+       "<ellipse fill=\"none\" stroke=\"black\" cx=\"407\" cy=\"-45.5\" rx=\"27\" ry=\"18\"/>\n",
+       "<text text-anchor=\"middle\" x=\"407\" y=\"-41.8\" font-family=\"Times,serif\" font-size=\"14.00\">+</text>\n",
+       "</g>\n",
+       "<!-- 140694371498224+&#45;&gt;140694371498224 -->\n",
+       "<g id=\"edge1\" class=\"edge\">\n",
+       "<title>140694371498224+&#45;&gt;140694371498224</title>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M434.26,-45.5C441.96,-45.5 450.73,-45.5 459.64,-45.5\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"459.71,-49 469.71,-45.5 459.71,-42 459.71,-49\"/>\n",
+       "</g>\n",
+       "<!-- 140695882297232 -->\n",
+       "<g id=\"node5\" class=\"node\">\n",
+       "<title>140695882297232</title>\n",
+       "<polygon fill=\"none\" stroke=\"black\" points=\"235,-55.5 235,-91.5 342,-91.5 342,-55.5 235,-55.5\"/>\n",
+       "<text text-anchor=\"middle\" x=\"288.5\" y=\"-69.8\" font-family=\"Times,serif\" font-size=\"14.00\">data &#45;6.0000</text>\n",
+       "</g>\n",
+       "<!-- 140695882297232&#45;&gt;140694371498224+ -->\n",
+       "<g id=\"edge3\" class=\"edge\">\n",
+       "<title>140695882297232&#45;&gt;140694371498224+</title>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M342.3,-60.81C352.18,-58.43 362.28,-56.01 371.43,-53.81\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"372.41,-57.17 381.31,-51.43 370.77,-50.37 372.41,-57.17\"/>\n",
+       "</g>\n",
+       "<!-- 140695882297232*&#45;&gt;140695882297232 -->\n",
+       "<g id=\"edge2\" class=\"edge\">\n",
+       "<title>140695882297232*&#45;&gt;140695882297232</title>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M197.14,-73.5C205.41,-73.5 214.93,-73.5 224.62,-73.5\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"224.74,-77 234.74,-73.5 224.74,-70 224.74,-77\"/>\n",
+       "</g>\n",
+       "<!-- 140695882294208 -->\n",
+       "<g id=\"node7\" class=\"node\">\n",
+       "<title>140695882294208</title>\n",
+       "<polygon fill=\"none\" stroke=\"black\" points=\"233,-0.5 233,-36.5 344,-36.5 344,-0.5 233,-0.5\"/>\n",
+       "<text text-anchor=\"middle\" x=\"288.5\" y=\"-14.8\" font-family=\"Times,serif\" font-size=\"14.00\">data 10.0000</text>\n",
+       "</g>\n",
+       "<!-- 140695882294208&#45;&gt;140694371498224+ -->\n",
+       "<g id=\"edge4\" class=\"edge\">\n",
+       "<title>140695882294208&#45;&gt;140694371498224+</title>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M344.34,-31.21C353.57,-33.35 362.91,-35.51 371.44,-37.49\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"370.85,-40.95 381.38,-39.79 372.43,-34.13 370.85,-40.95\"/>\n",
+       "</g>\n",
+       "</g>\n",
+       "</svg>\n"
+      ],
+      "text/plain": [
+       "<graphviz.graphs.Digraph at 0x7ff5f6033a10>"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# The operators are fake nodes, just to make it look nice\n",
+    "draw_dot(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
